--- a/style.css
+++ b/style.css
@@ -1,3 +1,65 @@
+.container {
+  margin-bottom: 50px;
+}
 .orange-bg {
   background-color: #fceae8;
+  border-radius: 5px;
+}
+.carousel-item {
+  padding: 20px 100px;
+}
+.price {
+  color: #f44336;
+}
+.by-now-button {
+  background-image: linear-gradient(to bottom, #ff5898 0%, #ff136f 100%);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 9px 25px;
+  cursor: pointer;
+}
+
+.cat1,
+.cat2,
+.cat3 {
+  padding: 10px 30px;
+  border-radius: 10px;
+}
+.cat1 {
+  background-color: orange;
+}
+
+.cat2 {
+  background-color: orchid;
+}
+.cat3 {
+  background-color: blue;
+}
+.categories h1 {
+  color: white;
+}
+.categories img {
+  width: 100px;
+}
+.card {
+  border: none;
+  box-shadow: 5px 5px 10px lightgrey;
+  border-radius: 10px;
+}
+.card-footer {
+  background-color: white;
+  border-top: none;
+}
+#contactus {
+  height: 300px;
+}
+#contactus h6 {
+  color: gray;
+}
+#contactus button {
+  margin-top: 5px;
+}
+footer {
+  text-align: center;
 }
